--- a/res/layout/home_vp_list_left.xml
+++ b/res/layout/home_vp_list_left.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         />
-    <android.support.v4.view.ViewPager
+    <cn.jinke.peasantcloud.view.DispatchViewPager
         android:id="@+id/home_left_vp"
         android:layout_height="match_parent"
         android:layout_width="match_parent"       
