--- a/res/layout/activity_splash_index.xml
+++ b/res/layout/activity_splash_index.xml
@@ -10,12 +10,13 @@
     android:background="#1C1F48"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scaleType="fitXY"
     android:src="@drawable/lanuch_bg_ware"/>
 
 <ImageView 
      android:background="#1C1F48"
     android:layout_centerHorizontal="true"
-    android:layout_marginTop="50dp"
+    android:layout_marginTop="100dp"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:src="@drawable/logo_9"/>"
