--- a/res/layout/lecture_live_gv_list.xml
+++ b/res/layout/lecture_live_gv_list.xml
@@ -21,13 +21,25 @@
             
             />
 
+        
         <TextView
-            android:id="@+id/live_gv_tv"
+            android:id="@+id/live_gv_tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/live_gv_img"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5.0dip"
+            android:layout_marginTop="5dp"
+            android:maxLines="1"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp"
+            android:text="2016-08-08"/>
+        <TextView
+            android:id="@+id/live_gv_tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/live_gv_tv_time"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
             android:maxLines="1"
             android:textColor="@color/commo_text_color"
             android:textSize="12sp"
