--- a/res/layout/home_leftvp_list.xml
+++ b/res/layout/home_leftvp_list.xml
@@ -14,6 +14,7 @@
    	    android:divider="#F5F5F5"
 		android:dividerHeight="1dp"
 		android:listSelector="@android:color/transparent"
+		android:scrollbars="none"
    	    />
 
 </LinearLayout>
