--- a/res/layout/lecture_vp_live.xml
+++ b/res/layout/lecture_vp_live.xml
@@ -4,7 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <cn.jinke.peasantcloud.view.MyGridView
+    
+    <ListView 
+        android:id="@+id/lecture_live_lv"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:divider="@android:color/transparent"
+	    android:listSelector="@android:color/transparent"/>
+    <!-- <cn.jinke.peasantcloud.view.MyGridView
         android:id="@+id/lecture_live_gv"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
@@ -13,7 +20,7 @@
         android:numColumns="3"
         android:scrollbars="none"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="0dp"/>
+        android:verticalSpacing="0dp"/> -->
   <!--  <io.vov.vitamio.widget.VideoView
         android:id="@+id/surface_view"
         android:layout_width="wrap_content"
