--- a/res/layout/fragment_left_menu.xml
+++ b/res/layout/fragment_left_menu.xml
@@ -3,121 +3,134 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/left_menu_bg"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
+
     <RelativeLayout
-        android:layout_height="160dp"
         android:layout_width="wrap_content"
-        >
-	    <cn.jinke.peasantcloud.view.CircularImage 
-	        android:id="@+id/home_left_menu_header"
-	        android:layout_centerVertical="true"
-	        android:layout_marginLeft="20dp"
-	        android:layout_width="50dp"  
-	        android:layout_height="50dp"  
-	        android:src="@drawable/header"/>
-	    <LinearLayout 
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_toRightOf="@id/home_left_menu_header"
-	        android:layout_marginLeft="10dp"
-	        android:orientation="vertical"
-	        android:layout_centerVertical="true">
-	        <LinearLayout 
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:gravity="center_vertical"
-	            android:orientation="horizontal">
-		        <TextView 
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:text="农民老李"
-		            android:textColor="#fff"
-		            android:textSize="18sp"/>
-		        <ImageView 
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/jewel"
-		            android:layout_marginLeft="10dp"/>
-		        <TextView 
-		            android:layout_height="wrap_content"
-		            android:layout_width="wrap_content"
-		            android:layout_marginLeft="5dp"
-		            android:text="120"
-		            android:textColor="#F8E71C"
-		            android:textSize="16sp"/>
-		    </LinearLayout>
-	        <TextView 
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="江苏省.南京市"
-	            android:textColor="#fff"
-	            android:textSize="15sp"/>
-	    </LinearLayout>
-	    <ImageView 
-	        android:layout_width="40dp"
-	        android:layout_height="40dp"
-	        android:layout_centerVertical="true"
-	        android:layout_alignParentRight="true"
-	        android:layout_marginRight="15dp"
-	        android:src="@drawable/home_left_menu_sao"/>
-	    <LinearLayout 
-	        android:layout_height="wrap_content"
-	        android:layout_width="match_parent"
-	        android:layout_alignParentBottom="true"
-	        android:layout_marginBottom="5dp"
-	        android:orientation="horizontal">
-	        <ImageView 
-	            android:layout_height="15dp"
-	            android:layout_width="15dp"
-	            android:layout_gravity="center_vertical"            
-	            android:src="@drawable/me_left_follow"
-	            android:layout_marginLeft="30dp"/>
-	        <TextView 
-	            android:layout_height="wrap_content"
-	            android:layout_width="wrap_content"
-	            android:text="关注"
-	            android:textSize="18sp"
-	            android:textColor="#fff"
-	            android:layout_marginLeft="10dp"/>
-	        <TextView 
-	            android:layout_height="wrap_content"
-	            android:layout_width="wrap_content"
-	            android:text="(3)"
-	            android:textSize="18sp"
-	            android:textColor="#fff"
-	            android:layout_marginLeft="10dp"/>
-	        <ImageView 
-	            android:layout_width="15dp"
-	            android:layout_gravity="center_vertical"
-	            android:layout_height="15dp"
-	            android:src="@drawable/me_left_fav"
-	            android:layout_marginLeft="25dp"/>
-	        <TextView 
-	            android:layout_height="wrap_content"
-	            android:layout_width="wrap_content"
-	            android:text="收藏"
-	            android:textSize="18sp"
-	            android:textColor="#fff"
-	            android:layout_marginLeft="10dp"/>
-	        <TextView 
-	            android:layout_height="wrap_content"
-	            android:layout_width="wrap_content"
-	            android:text="(32)"
-	            android:textSize="18sp"
-	            android:textColor="#fff"
-	            android:layout_marginLeft="10dp"/>
-	    </LinearLayout>
-	    
-	</RelativeLayout>
-	<ListView 
-	    android:id="@+id/home_left_menu_lv"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_marginLeft="55dp"
-	    android:layout_marginTop="55dp"
-	    android:listSelector="@android:color/transparent"
+        android:layout_height="160dp" >
+
+        <cn.jinke.peasantcloud.view.CircularImage
+            android:id="@+id/home_left_menu_header"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/header" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/home_left_menu_header"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="农民老李"
+                    android:textColor="#fff"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/jewel" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="120"
+                    android:textColor="#F8E71C"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="江苏省.南京市"
+                android:textColor="#fff"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/home_left_menu_sao" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30dp"
+                android:src="@drawable/me_left_follow" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="关注"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="(3)"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="25dp"
+                android:src="@drawable/me_left_fav" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="收藏"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="(32)"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/home_left_menu_lv"
+        android:layout_width="200dp"
+        android:layout_marginTop="55dp"
+        android:layout_height="wrap_content"
         android:divider="@android:color/transparent"
-	    />
-    
+        android:listSelector="@android:color/transparent" />
 
 </LinearLayout>
