--- a/res/layout/home_menu_lv_item.xml
+++ b/res/layout/home_menu_lv_item.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     android:paddingTop="22dp"
     android:paddingBottom="22dp" >
+    <LinearLayout 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <ImageView 
         android:id="@+id/home_left_menu_lv_img"
         android:layout_gravity="center_vertical"
@@ -21,7 +26,7 @@
         android:textSize="22sp"
         android:textColor="#fff"
         android:layout_marginLeft="10dp"/>
-	
+	</LinearLayout>
     
  
 </LinearLayout>
