--- a/res/layout/activity_add_farmer_friend.xml
+++ b/res/layout/activity_add_farmer_friend.xml
@@ -2,114 +2,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:background="#f5f4f9"
-   android:orientation="vertical"
+    android:background="#f5f4f9"
+    android:orientation="vertical"
     tools:context=".AddFarmerFriendActivity" >
-    
-    <RelativeLayout 
-	    android:layout_height="50dp"
-	    android:layout_width="match_parent"
-	    android:background="#4BA42F">
-	    <RelativeLayout 
-	        android:id="@+id/back_btn_addfriend"
-	        android:layout_height="50dp"
-	        android:layout_width="50dp">
-	        <ImageView 
-	        
-	        android:layout_height="20dp"
-	        android:layout_width="10dp"
-	        android:layout_centerVertical="true"
-	        android:layout_marginLeft="20dp"
-	        android:src="@drawable/back_btn"/>
-	    </RelativeLayout>
-	    
-	    <TextView 
-	        android:layout_height="wrap_content"
-	        android:layout_width="wrap_content"
-	        android:layout_centerInParent="true"
-	        android:text="添加农友"
-	        android:textSize="22sp"
-	        android:textColor="#fff"/>
-	   
-	</RelativeLayout>
-	
-    <RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-         <EditText  
-   	    		android:background="#fff"
-                android:id="@+id/search_et_input_addfriend"  
-                android:padding="10dp"
-                android:layout_gravity="center_vertical"  
-               android:layout_marginTop="10dp" 
-                android:drawableLeft="@drawable/chat_search_small_icon"  
-                android:drawablePadding="10dp"  
-                android:layout_width="match_parent"  
-                android:layout_height="wrap_content"  
-                android:textSize="12sp"  
-                android:imeOptions="actionSearch"  
-                android:inputType="text"  
-                android:hint="手机号 / 用户名"/> 
-      		
-        
-    </RelativeLayout>
-    
-	<!-- <LinearLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content">
-	    
-	    <EditText  
-   	    		android:background="@drawable/search_edittext_shape"
-                android:id="@+id/search_et_input"  
-                android:layout_gravity="center_vertical"  
-                android:layout_marginTop="10dp"
-                android:drawablePadding="5dp" 
-                android:drawableLeft="@drawable/chat_search_small_icon"       
-                android:layout_width="match_parent"  
-                android:layout_height="wrap_content"  
-                android:textSize="16sp"  
-                android:imeOptions="actionSearch"  
-                android:inputType="text"  
-                android:hint="手机号 / 用户名"/> 
-	    
-	</LinearLayout> -->
-	
-	 	<RelativeLayout android:layout_width="match_parent"
-   	    android:layout_height="50dp"
-   	    android:background="#fff"
-   	     android:layout_marginTop="30dp">
-	    <ImageView 
-	        android:id="@+id/img_framer_friend"
-	        android:layout_centerVertical="true"
-	        android:layout_width="20dp"
-	        android:layout_height="20dp"
-	        android:layout_marginLeft="10dp"
-	        android:src="@drawable/chat_addfriend_left_icon_scan"
-	       />
-	    <TextView 
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="20dp"
-	        android:text="扫一扫"
-	        android:textSize="15sp"
-	        android:layout_centerVertical="true"
-	        android:textColor="#000"
-	        android:layout_toRightOf="@id/img_framer_friend"/>
-	    
-	    <ImageView 
-	        android:id="@+id/img_framer_right_arrow"
-	        android:layout_centerVertical="true"
-	        android:layout_width="12dp"
-	        android:layout_height="12dp"
-	       	android:layout_marginRight="10dp"
-	       	android:layout_alignParentRight="true"
-	        android:src="@drawable/right_arrow"
-	       />
-   	    
-   	</RelativeLayout>
-    	
-                
 
-   
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#4BA42F" >
+
+        <RelativeLayout
+            android:id="@+id/back_btn_addfriend"
+            android:layout_width="50dp"
+            android:layout_height="50dp" >
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/back_btn" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="添加农友"
+            android:textColor="#fff"
+            android:textSize="22sp" />
+    </RelativeLayout>
+
+  
+
+    <ListView
+        android:id="@+id/lv_recommended"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="#f5f4f9"
+        android:dividerHeight="1dp" >
+    </ListView>
 
 </LinearLayout>
