--- a/res/layout/friend_right_view.xml
+++ b/res/layout/friend_right_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-  	<ListView 
+  	<!-- <ListView 
    	   
    	    android:id="@+id/lv_in_fragment_friend_right"
    	    android:layout_width="match_parent"
@@ -12,6 +12,18 @@
    	    android:dividerHeight="1dp"
    	    android:divider="#f5f4f9">
    	    
-   	</ListView>
+   	</ListView> -->
+   	
+   	<ExpandableListView  	   
+   	    android:id="@+id/lv_in_fragment_friend_right"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="match_parent"
+   	    android:childDivider="#f5f4f9"
+   	   android:divider="#f5f4f9"
+   	   android:dividerHeight="1dp"
+   	   android:listSelector="#00000000"
+   	   android:cacheColorHint="#00000000"
+   	   android:groupIndicator="@null">    
+   	</ExpandableListView>
    	
 </LinearLayout>
