--- a/res/layout/header_of_fragment_friend.xml
+++ b/res/layout/header_of_fragment_friend.xml
@@ -55,7 +55,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginLeft="20dp"
-	        android:text="农友圈"
+	        android:text="群组"
 	        android:textSize="15sp"
 	        android:layout_centerVertical="true"
 	        android:textColor="#000"
