--- a/res/layout/activity_home_search.xml
+++ b/res/layout/activity_home_search.xml
@@ -50,7 +50,8 @@
 	    android:id="@+id/home_search_lv"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:divider="@android:color/transparent"
+	    android:divider="#F5F5F5"
+	    android:dividerHeight="1dp"
 	    android:listSelector="@android:color/transparent"
 	    />
 
