--- a/res/layout/fragment_consult_right.xml
+++ b/res/layout/fragment_consult_right.xml
@@ -3,39 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-	<RelativeLayout 
-	    android:layout_height="50dp"
-	    android:layout_width="match_parent"
-	    android:background="#4BA42F">
-	    <ImageView 
-	        android:id="@+id/consult_img_user"
-	        android:layout_height="25dp"
-	        android:layout_width="20dp"
-	        android:layout_centerVertical="true"
-	        android:layout_marginLeft="20dp"
-	        android:src="@drawable/home_left_user"/>
-	    <cn.jinke.peasantcloud.view.SegmentView2
-	        android:id="@+id/consult_seg"
-	        android:layout_width="240dp"  
-	        android:layout_height="wrap_content"  
-	        android:layout_gravity="center_horizontal"
-	        android:layout_centerInParent="true"/> 
-        <ImageView 
-	        android:id="@+id/consult_img_search"
-	        android:layout_height="20dp"
-	        android:layout_width="20dp"
-	        android:layout_centerVertical="true"
-	        android:layout_alignParentRight="true"
-	        android:layout_marginRight="20dp"
-	        android:src="@drawable/home_right_search"/>
-	</RelativeLayout>
-	<cn.jinke.peasantcloud.view.NoScrollViewPager 
-	    android:id="@+id/consult_vp"
-    	android:layout_height="match_parent"
-    	android:layout_width="match_parent"/>
-	
-	
-	<!-- <LinearLayout 
+    <LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="40dp"
 	    android:orientation="horizontal">
@@ -77,5 +45,6 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:divider="@android:color/transparent"
-	    android:listSelector="@android:color/transparent"/> -->
+	    android:listSelector="@android:color/transparent"/>
+
 </LinearLayout>
