--- a/res/layout/fragment_left_menu.xml
+++ b/res/layout/fragment_left_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/left_menu_bg"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
+   	>
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="wrap_content"
         android:layout_height="160dp" >
 
@@ -38,26 +38,12 @@
                     android:text="农民老李"
                     android:textColor="#fff"
                     android:textSize="18sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/jewel" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="120"
-                    android:textColor="#F8E71C"
-                    android:textSize="16sp" />
             </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="江苏省.南京市"
+                android:text="农技员"
                 android:textColor="#fff"
                 android:textSize="15sp" />
         </LinearLayout>
@@ -126,11 +112,49 @@
     </RelativeLayout>
 
     <ListView
+        android:layout_below="@id/rl"
         android:id="@+id/home_left_menu_lv"
         android:layout_width="200dp"
-        android:layout_marginTop="55dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
         android:divider="@android:color/transparent"
         android:listSelector="@android:color/transparent" />
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_alignParentBottom="true"
+        android:background="#3000" >
+
+        <ImageView
+            android:id="@+id/zuanshi"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/jewel" />
+
+        <TextView
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/zuanshi"
+            android:layout_marginLeft="10dp"
+            android:text="120"
+            android:textColor="#F8E71C"
+            android:textSize="16sp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="签到"
+            android:textColor="#fff"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/left_button_circle"/>
+    </RelativeLayout>
+
+</RelativeLayout>
