--- a/res/layout/home_vp_item.xml
+++ b/res/layout/home_vp_item.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp"
-    >
-        
+    > 
    	<ListView 
    	    android:layout_marginTop="1dp"
-   	    android:id="@+id/home_left_lv"
+   	    android:id="@+id/home_tab_lv"
    	    android:layout_height="wrap_content"
    	    android:layout_width="match_parent"
    	    android:divider="#F5F5F5"
