--- a/res/layout/listview_item_recommended.xml
+++ b/res/layout/listview_item_recommended.xml
@@ -12,6 +12,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_marginTop="30dp"
 	    android:layout_marginLeft="10dp"
+	    android:layout_marginBottom="5dp"
 	    android:text="推荐群组"/>
     	 	
     <cn.jinke.peasantcloud.view.MyListView 
